testsuite/tests/typecheck/should_fail/CustomTypeErrors08.stderr
CustomTypeErrors08.hs:20:11:
     Error
     In the expression: bad
      In an equation for ‘problem’: problem = bad
